<resources>
    <string name="app_name">Popular Movies App</string>

    <string name="movieDB">https://api.themoviedb.org/3/movie/%1$s?api_key=%2$s&amp;language=en-US</string>
    <string name="movieVid">https://api.themoviedb.org/3/movie/%1$s/videos?api_key=%2$s&amp;language=en-US</string>
    <string name="imageUrl">https://image.tmdb.org/t/p/w342</string>
    <string name="imageUrlOrg">https://image.tmdb.org/t/p/original</string>
    <string name="reviewUrl">https://api.themoviedb.org/3/movie/%1$s/reviews?api_key=%2$s&amp;language=en-US&amp;page=1</string>

    <string name="latest">latest</string>
    <string name="playing">now_playing</string>
    <string name="popular">popular</string>
    <string name="top">top_rated</string>
    <string name="upcoming">upcoming</string>

    <string name="movie_item_image">movie item image</string>

    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="no_thing_to_display">No Thing to Display!</string>
    <string name="movie_backdrop_image">movie backdrop image</string>
    <string name="getting_data">Retrieving the reviews from the server…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="now_playing">Now Playing</string>
    <string name="tab_popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="tab_upcoming">Upcoming</string>
</resources>
