<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_main_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/sort"
        android:id="@+id/menu_main_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom" />

    <item android:title="@string/favorite"
        android:id="@+id/menu_main_fav"
        android:icon="@drawable/ic_favorite_black_24dp"
        app:showAsAction="never" />

    <item android:title="@string/settings"
        android:id="@+id/menu_main_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never" />
</menu>