<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/menu_main_fav"
                            android:layout_gravity="start"
                            style="@style/Widget.AppCompat.ActionButton"
                            app:srcCompat="@drawable/ic_favorite_black_24dp"/>

                        <SearchView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/menu_main_search"
                            android:layout_marginEnd="20dp"
                            android:searchIcon="@drawable/ic_search_white_24dp">

                        </SearchView>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/menu_main_settings"
                        android:layout_gravity="end"
                        style="@style/Widget.AppCompat.ActionButton"
                        app:srcCompat="@drawable/ic_tune_black_24dp"/>

                </FrameLayout>
            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/category_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyCustomTextAppearance"
                app:tabSelectedTextColor="@color/secondaryColor">

                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/now_playing" />

                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/tab_popular" />

                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/top_rated" />

                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/tab_upcoming" />
            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>